// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H5 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
>
  "Faith does not eliminate questions. But faith knows where to take them." ― Elisabeth Elliot
</Text>
`;

exports[`the H5 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H5 component should render a loading state 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
>
  Default H5 text
</Text>
`;

exports[`the H5 component should render a loading state with correct positioning (margins) 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 21,
      "paddingBottom": 10.5,
      "paddingTop": 13.86,
    }
  }
>
  Padded H5 text
</Text>
`;

exports[`the H5 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
>
  Default H5 text
</Text>
`;

exports[`the H5 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 21,
      "paddingBottom": 10.5,
      "paddingTop": 13.86,
    }
  }
>
  Padded H5 text
</Text>
`;
